# postgres

contrib/amcheck/: verify_heapam.c
doc/src/sgml/: textsearch.sgml
src/backend/access/common/: detoast.c  indextuple.c  toast_compression.c  toast_internals.c
src/backend/access/table/: toast_helper.c
src/backend/replication/logical/: proto.c
src/backend/replication/pgoutput/: pgoutput.c
src/backend/utils/adt/: varlena.c
src/backend/utils/misc/: guc_tables.c
src/include/: varatt.h
src/include/access/: toast_compression.h  toast_internals.h
src/test/modules/: meson.build
src/test/modules/test_toast_ext/: meson.build  test_toast_ext--1.0.sql  test_toast_ext.c  test_toast_ext.control
src/test/modules/test_toast_ext/expected/: test_toast_ext.out  test_toast_ext_1.out
src/test/modules/test_toast_ext/sql/: test_toast_ext.sql
src/test/regress/: parallel_schedule
src/test/regress/expected/: compression_zstd.out
src/test/regress/sql/: compression_zstd.sql
